[package]
name = "kissa-onebot11"
version = "0.1.0"
edition = "2021"

[dependencies]
kissabot = { git = "https://github.com/kissabot/kissabot.git" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.12"
tungstenite = "0.21.0"
url = "2.5.0"

[lib]
crate-type = ["dylib"]
